<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:elevation="20dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/badAssImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/badass_image_description"
        android:scaleType="centerCrop"
        android:transitionName="@string/badass_image_transition_name"
        tools:src="@drawable/ic_profile_placeholder" />

    <LinearLayout
        android:id="@+id/contentName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/colorGray60Percent"
        android:gravity="center_vertical"
        android:transitionName="@string/content_transition_name">

        <TextView
            fontPath="@string/bariol_bold"
            android:id="@+id/badAssName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:transitionName="@string/badass_name_transition_name"
            tools:text="Steve Jobs"
            tools:ignore="MissingPrefix" />
    </LinearLayout>
</android.support.v7.widget.CardView>

